kubernetes/apps/home/proxy/hass/external-route.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hass-proxy
  annotations:
    external-dns.kubernetes.io/target: "external.${CLUSTER_DOMAIN}"
spec:
  hostnames: ["hass.${CLUSTER_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: proxy-hass
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: "hass-proxy-extauthz"
spec:
  targetRefs:
    - group: "gateway.networking.k8s.io"
      kind: "HTTPRoute"
      name: "hass-proxy"
  extAuth:
    headersToExtAuth:
      - "X-Forwarded-For" # this is here so we can get the real IP
      - "accept"
      - "cookie"
      - "authorization"
      - "proxy-authorization"
      - "x-forwarded-proto"
    failOpen: false
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: "authelia"
          namespace: "auth"
          port: 80
      path: "/api/authz/ext-authz/"
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
